public/css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

html, body {
  font-family: Lato, Roboto, Arial;
}

.overlay {
   width: 100%;
   height: 100%;
   position:
   absolute;
   top: 0;
   left: 0;
   z-index: 10;
}

.noScroll {
    overflow: hidden;
    position:fixed;
}

.clickable {
  cursor: pointer;
}

.invisible {
  display: none !important;
}

.aspect-ratio-wrapper {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 51%;
}

.aspect-ratio {
  width: 100%;
}

.aspect-ratio-wrapper .aspect-ratio  {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0; top: 0;
}

nav ul a,
nav .brand-logo {
  color: #444;
}

p {
  line-height: 2rem;
}

.button-collapse {
  color: #26a69a;
}

.card-title {
  background: rgba(0, 0, 0, .7);
}

#nav-mobile {
  width: 180px !important;
}

.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
  .parallax-container .section {
    width: 100%;
  }

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.icon-block {
  padding: 0 15px;
  margin-top: 20px;
}
.icon-block .material-icons {
  font-size: inherit;
}


.search--image {
  position: relative;
  overflow: hidden;
  z-index: 0;
  transition: height .5s;
  height: calc(50vh)
}

.search--image .search--container {
  position: absolute;
  left: 0;
  right: 0;
  bottom: calc(15vh);
  transition: bottom .5s
}

.search--image .search--container .search--input {
  border: none;
  box-shadow: none;
  border-bottom: 1px solid #ddd;
  width: calc(100% - 60px);
  float: right;
  height: 70px;
  font-size: 32pt;
  font-weight: 300;
  text-align: center;
  background-color: rgba(255, 255, 255, 0);
  color: #fff;
  position: relative
}

.search--image .search--container .search--input * {
  position: relative;
  top: 0
}

.search--image .search--container .search--input:focus {
  background-color: rgba(255, 255, 255, .5)
}

footer img{
  margin-top: 20px;
}

footer.page-footer {
  margin: 0;
}

.mapcontainer {
    height: 85vh;
  margin-top: 10px;
}

.stretch-height {
  height: 90vh;
  overflow-y: scroll;
  margin-bottom: 0;
  margin-top: 5px;
}

#max_nr_of_roommates {
  margin-bottom: 0;
}

.map-main {
  box-shadow: 0 0 3px 0 black;
}

.nomargins .map-main {
box-shadow: none;
}
.nomargins.mapcontainer {
margin-top: 5px;
  padding: 0;
  height: 90vh;
}

.stuck {
  position:fixed;
  top:0;
  left: unset !important;
  right: 0 !important;
}

.search-flex {
  display: flex;
  flex-flow: row nowrap;
}

.search-left {
  flex: 0 1 400px;
  margin-left: 5px;
  margin-right: 5px;
  box-shadow: 2px 0 2px -2px black;
}

.customicon {
  line-height: 0;
  cursor: pointer !important;
}

.search-map {
  flex: 1 0 auto;
}

personality-test .dim {
  background: rgba(0,0,0,0.5);
}

personality-test .content {
  height: 94vh;
  margin-top: 3vh;
  padding: 10px 0 30px 0;
  background: white;
  overflow: scroll;
}

personality-test .section-description {
  font-size: 14pt;
  color: rgba(0,0,0,0.6);
}

personality-test .question-title {
  font-size: 11pt;
  font-weight: 800;
}

personality-test .input-field {
  padding: 0 !important;
  color: rgba(0,0,0,0.8);
}

personality-test .materialboxed {
  margin: 20px 0;
}


personality-test .likert-line {
  margin: 10px 0 20px 0;
}

/* ANIMATIONS  */
.animated {
    animation-duration: 0.9s;
    animation-fill-mode: both;
    animation-timing-function: ease-in-out;
}

@keyframes shake {
    0%, 100% {transform: translateX(0);}
    10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
    20%, 40%, 60%, 80% {transform: translateX(10px);}
}
.shake {
    animation-name: shake;
}

